[gd_scene load_steps=7 format=3 uid="uid://ccxi8s330l0y3"]

[ext_resource type="Theme" uid="uid://cwmjrgohke0do" path="res://theme/main_theme.tres" id="1_lndgn"]
[ext_resource type="Script" path="res://view/edit_group_view/edit_group_view.gd" id="2_6jjt5"]
[ext_resource type="Shader" path="res://shader/panel_blur.gdshader" id="3_fmbpe"]
[ext_resource type="Texture2D" uid="uid://b87q0sh7t3huw" path="res://asset/img/button-close.png" id="4_qm84f"]
[ext_resource type="Texture2D" uid="uid://c21t28dluvwtg" path="res://asset/img/button-done.png" id="5_sjf0x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ofj8m"]
shader = ExtResource("3_fmbpe")
shader_parameter/panel_color = null
shader_parameter/alpha = 0.1

[node name="EditGroupView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lndgn")
script = ExtResource("2_6jjt5")

[node name="PanelContainer" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_ofj8m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Add A New Timer Group"
horizontal_alignment = 1

[node name="TitleLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
placeholder_text = "Title"
alignment = 1

[node name="TimerGroupSetupHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SequentialCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/TimerGroupSetupHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Sequential"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
icon = ExtResource("4_qm84f")

[node name="AddGroupButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Add Timer"
icon = ExtResource("5_sjf0x")

[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/TitleLineEdit" to="." method="_on_title_line_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AddGroupButton" to="." method="_on_add_group_button_pressed"]
